{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 21,
  "lineage": "90d8bf2f-87bd-d6ab-8660-a89495a1299f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "customer-services-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:326213389784:instance/i-0d3d4d3e978915665",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3d4d3e978915665",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "customer-services",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09403c0c6af022f28",
            "private_dns": "ip-10-0-0-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.13",
            "public_dns": "ec2-44-212-22-249.compute-1.amazonaws.com",
            "public_ip": "44.212.22.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0205de60a7ace6b20",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd114f95812d66e9",
            "tags": {
              "Name": "cs-dev-server",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "Name": "cs-dev-server",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a33e38b4426edb5",
              "sg-0af01e4a5a22bb51a"
            ]
          },
          "dependencies": [
            "aws_key_pair.customer-services-key",
            "aws_security_group.cs-db",
            "aws_security_group.cs-nginx",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cs-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:security-group/sg-09a33e38b4426edb5",
            "description": "Allow MySQL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a33e38b4426edb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cs-db",
            "name_prefix": "",
            "owner_id": "326213389784",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eed52d3e59ec7f87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cs-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:security-group/sg-0af01e4a5a22bb51a",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af01e4a5a22bb51a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx",
            "name_prefix": "",
            "owner_id": "326213389784",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eed52d3e59ec7f87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:internet-gateway/igw-03b2cf61e17e03264",
            "id": "igw-03b2cf61e17e03264",
            "owner_id": "326213389784",
            "tags": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "vpc_id": "vpc-0eed52d3e59ec7f87"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b2cf61e17e03264",
            "id": "r-rtb-09e1cf79c564041941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e1cf79c56404194",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:route-table/rtb-0a0f579005c388833",
            "id": "rtb-0a0f579005c388833",
            "owner_id": "326213389784",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eed52d3e59ec7f87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:route-table/rtb-0e9ef3bbeedf5591e",
            "id": "rtb-0e9ef3bbeedf5591e",
            "owner_id": "326213389784",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eed52d3e59ec7f87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:route-table/rtb-09e1cf79c56404194",
            "id": "rtb-09e1cf79c56404194",
            "owner_id": "326213389784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b2cf61e17e03264",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eed52d3e59ec7f87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d075ab0abda72c08",
            "route_table_id": "rtb-0a0f579005c388833",
            "subnet_id": "subnet-0272ba523dc26fd20"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad916729a69f0094",
            "route_table_id": "rtb-0e9ef3bbeedf5591e",
            "subnet_id": "subnet-015180bff5042aa2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a39a6d1509ce2dd6",
            "route_table_id": "rtb-09e1cf79c56404194",
            "subnet_id": "subnet-0bd114f95812d66e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:subnet/subnet-0272ba523dc26fd20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0272ba523dc26fd20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326213389784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "vpc_id": "vpc-0eed52d3e59ec7f87"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:subnet/subnet-015180bff5042aa2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015180bff5042aa2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326213389784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "vpc_id": "vpc-0eed52d3e59ec7f87"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:subnet/subnet-0bd114f95812d66e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd114f95812d66e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "326213389784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "vpc_id": "vpc-0eed52d3e59ec7f87"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:326213389784:vpc/vpc-0eed52d3e59ec7f87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0585d5c7f7ca56fab",
            "default_route_table_id": "rtb-058bcdcb9c76ad87b",
            "default_security_group_id": "sg-0ddfee9919b8b2025",
            "dhcp_options_id": "dopt-0b4834ea68bdc6c47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eed52d3e59ec7f87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058bcdcb9c76ad87b",
            "owner_id": "326213389784",
            "tags": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            },
            "tags_all": {
              "Name": "cs-dev-vpc",
              "billing_code": "cs-1",
              "project": "Customer Services"
            }
          }
        }
      ]
    }
  ]
}